<resources>
    <string name="app_name">LoginRegistrationView</string>
    <string name="registration_page">Registration</string>
    <string name="status_page">Status</string>



    <string name="name_error">EnterValidName</string>
    <string name="password_error_2">Password Does Not Match</string>
    <string name="password_error">Enter Password AtLeast 6 Character</string>
    <string name="last_name_error">EnterValidLastName</string>
    <string name="email_error">EnterValidEmail</string>
    <string name="phone_error">EnterValidPhoneNum</string>
    <string name="first_name">FirstName</string>
    <string name="last_name">LastName</string>
    <string name="confirm_password">ConfirmPassword</string>
    <string name="submit">Submit</string>
    <string name="select_date">Select Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sex">Sex :- </string>
    <string name="city">City :- </string>
    <string name="email_address">EmailAddress :- </string>
    <string name="password">Password :- </string>
    <string name="phone_number">PhoneNumber :- </string>
    <string name="date_of_birth">DateOfBirth :- </string>
    <string name="name">Name :- </string>

    <string name="sex1">Sex</string>
    <string name="city1">City</string>
    <string name="email_address1">EmailAddress</string>
    <string name="password1">Password</string>
    <string name="phone_number1">PhoneNumber</string>
    <string name="date_of_birth1">DateOfBirth</string>
    <string name="name1">Name</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="gender">Gender :- </string>


</resources>
